kredentials (2.0-pre3)

  * Fix 'Destroy credentials', which I'd accidentally disabled.

 --

kredentials (2.0-pre2)

    * Install .desktop to XDG_APPS_INSTALL_DIR
    * Add X-KDE-StartupNotify=false to .desktop
    * Clean up some kDebug messages

 -- Noah Meyerhans <noahm@debian.org>  Tue, 27 Dec 2011 10:42:00 -0800

kredentials (2.0-pre1) unstable; urgency=low

  * Port to KDE 4

 -- Noah Meyerhans <noahm@debian.org>  Mon, 26 Dec 2011 00:57:53 -0800

kredentials (0.9.5) unstable; urgency=low

  * Change the symbol we look for when checking for the presence of
    -lkrb5 in the configure script. (Closes: #571393)

 -- Noah Meyerhans <noahm@debian.org>  Wed, 24 Mar 2010 00:50:40 -0700

kredentials (0.9.4) unstable; urgency=low

  * Include patch from Hai Zaar <haizaar@gmail.com>
    - Make kredentials build against heimdal kerberos
    - kscreensaver awareness - the password dialog will not popup if screen
      saver is running.  (should probably make this support e.g.
      xscreensaver, too)
    - If user does not enter the password (hits Cancel), prompt for the
      password again later.

 -- Noah Meyerhans <noahm@debian.org>  Mon, 10 Dec 2007 21:20:39 -0500

kredentials (0.9.3) UNRELEASED; urgency=low

  * Fix building on GCC 4.3 (Closes: Bug#417302)

 -- Noah Meyerhans <noahm@lore.csail.mit.edu>  Thu, 12 Jul 2007 09:41:28 -0400

kredentials (0.9.2) unstable; urgency=medium

  * incorporate patch from Martin Ginkel <mginkel@mpi-magdeburg.mpg.de>
    - factored out kerberos-code with c++ wrappers for all krb5_xxx data
    - added lots of krb5 memory-free code, otherwise kredentials eats 
      continuously memory
    - added new actions and methods for destroying credentials and creating 
      them from password
    - added a CLI test for the kerberos part (debugging of kde-apps is awful)
  * make a first attempt at docbook documentation
  * update all the files in admin/*, including config.sub and config.guess